FIX: Fixes minor bugs related to Db migration, auth error, and password hashing
